# starter-backend

./: Cargo.toml  README.md  config.yaml  config_test.yaml
abi/: Cargo.toml
abi/src/: config.rs  error.rs  executer.rs  lib.rs  project.rs
abi/src/executer/: cmd.rs  mod.rs
api/: Cargo.toml
api/src/: error.rs  lib.rs
crates/abi/: Cargo.toml
crates/abi/src/: config.rs  error.rs  lib.rs  utils.rs
crates/abi/src/executer/: cmd.rs  mod.rs
crates/api/: Cargo.toml
crates/api/src/: error.rs  lib.rs
crates/db/src/: error.rs
crates/db/src/database/: project.rs
crates/db/src/database/dao/: mod.rs  project.rs
crates/doc_index/: Cargo.toml
crates/doc_index/src/: error.rs  lib.rs
crates/doc_index/src/doc_index/: mod.rs  tag.rs
crates/entity/: Cargo.toml
crates/entity/src/: lib.rs  project.rs
crates/migration/src/: lib.rs  m20240626_015955_add_project.rs
crates/storage/: Cargo.toml
crates/storage/src/: error.rs  lib.rs
db/: Cargo.toml
db/src/: error.rs  lib.rs
db/src/database/: mod.rs  project.rs
db/src/database/dao/: project.rs
doc_index/src/: tag.rs
doc_index/src/doc_index/: mod.rs  tag.rs
entity/src/: project.rs
migration/: Cargo.toml
migration/src/: m20240626_015955_add_project.rs
rfcs/: db.md  主体流程.md  基于标签的全局搜索.md  模板.md  用户数据的修改与保存.md  项目.md  项目执行器.md
