[package]
name = "abi"
version = "0.1.0"
edition = "2021"

[dependencies]
uuid = { version = "1.8", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = { version = "1.0" }
tracing = { version = "0.1" }
async-trait = { version = "0.1" }
dashmap = { version = "6.0" }
directories = "5.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.38", features = ["full"] }

figment = { version = "0.10", features = ["yaml"] }

sea-orm = { version = "0.12", features = [
    "runtime-tokio-native-tls",
    "sqlx-sqlite",
] }
